--- a/UI/src/app/pages/password-reset-validate-token/password-reset-validate-token.component.html
+++ b/UI/src/app/pages/password-reset-validate-token/password-reset-validate-token.component.html
@@ -1,9 +1,9 @@
 <main *ngIf="!tokenValid" class="container-fluid">
   <div class="center">
-    <div class="p-grid">
+    <div class="grid">
 
-      <div class="p-col" style="max-width: 40rem; margin: auto;">
-        <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Invalid link</h1>
+      <div class="col" style="max-width: 40rem; margin: auto;">
+        <h1 class="h3 mt-5 mb-0 font-weight-normal">Invalid link</h1>
 
         <p>The password reset link was invalid, possibly because it has already been used.
           <br>
