--- a/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.html
+++ b/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.html
@@ -1,12 +1,12 @@
 <main #userDataHelpPage>
-  <h1 class="h4 p-mb-3 font-weight-normal">Go to section</h1>
+  <h1 class="h4 mb-3 font-weight-normal">Go to section</h1>
   <p>
     <a routerLink="{{pageUrl}}" fragment="ncstack">Option 1: NetCDF4 Image Stacks</a><br/>
     <a routerLink="{{pageUrl}}" fragment="csvfiles">Option 2: CSV Time Series Files</a><br/>
     <a routerLink="{{pageUrl}}" fragment="examplefiles">Example Files</a><br/>
   </p>
 
-  <h1 id="intro" class="h1 p-mb-3 font-weight-normal">User Data Upload</h1>
+  <h1 id="intro" class="h1 mb-3 font-weight-normal">User Data Upload</h1>
 
   <p>
     With this new, experimental feature we allow users to ingest (parts of) their own data sets into QA4SM for
@@ -108,7 +108,7 @@
       contain the coordinate values directly (148 longitude values in the following example).
       The coordinates along the two axes then span a 2-dimension grid that contains the information on the location of
       all points. The longitude variable is structured accordingly.
-      <table class="p-my-4 variable-table">
+      <table class="my-4 variable-table">
         <tr>
           <td><b>Variable</b></td>
           <td colspan="2">lat</td>
