--- a/UI/src/app/pages/my-datasets/my-datasets.component.html
+++ b/UI/src/app/pages/my-datasets/my-datasets.component.html
@@ -1,7 +1,7 @@
 <main>
 
   <div *ngIf="hasNoSpaceAssigned">
-    <div class="p-text-center lead text-muted p-pt-3">
+    <div class="text-center lead text-muted pt-3">
       You have no space for uploading data assigned. Please contact our team (support(at)qa4sm.eu) to solve this
       problem.
     </div>
@@ -9,33 +9,33 @@
 
   <div *ngIf="!hasNoSpaceAssigned">
     <div class="center">
-      <!--    <div class="p-col-9 p-text-center">-->
+      <!--    <div class="col-9 text-center">-->
       <h1>Upload your data</h1>
       <!--    </div>-->
     </div>
-    <div class="p-text-center lead text-muted p-pt-3">
+    <div class="text-center lead text-muted pt-3">
       {{getLimitMessage()}}
     </div>
 <!--    <hr class="featurette-divider">-->
-    <div class="p-text-center p-pt-5">
+    <div class="text-center pt-5">
       <qa-user-file-upload></qa-user-file-upload>
     </div>
     <hr class="featurette-divider">
     <div class="center">
-      <!--    <div class="p-col-9 p-text-center">-->
+      <!--    <div class="col-9 text-center">-->
       <h2>Uploaded data sets</h2>
       <!--    </div>-->
     </div>
     <div *ngIf="(userDatasets$ | async) as userDatasetList">
 
-      <div *ngIf="userDatasetList.length != 0" class="container p-mb-5 p-mt-4" style="max-width: 70rem;">
+      <div *ngIf="userDatasetList.length !== 0" class="container mb-5 mt-4" style="max-width: 70rem;">
         <div>
-          <div *ngFor="let userDataset of userDatasetList" class="p-mb-3">
+          <div *ngFor="let userDataset of userDatasetList" class="mb-3">
             <qa-user-data-row [userDataset]="userDataset"></qa-user-data-row>
           </div>
         </div>
         <hr class="featurette-divider">
-        <div class="lead text-muted p-pb-3">
+        <div class="lead text-muted pb-3">
           <div>
             Above you can find a list of datasets you have uploaded: <span *ngIf="!readMore">...</span>
             <span *ngIf="!readMore" (click)="toggleReadMore()" class="readMoreOrLess pi pi-arrow-down">
@@ -66,7 +66,7 @@
 
       </div>
 
-      <div *ngIf="userDatasetList.length == 0" class="p-text-center">
+      <div *ngIf="userDatasetList.length === 0" class="text-center">
         <div class="center">
           <p class="lead text-muted">
             You have not uploaded any data yet. Click the 'Upload file' button to add your own data.
