--- a/UI/src/app/pages/password-reset-done/password-reset-done.component.html
+++ b/UI/src/app/pages/password-reset-done/password-reset-done.component.html
@@ -1,9 +1,9 @@
 <main class="container-fluid">
   <div class="center">
-    <div class="p-grid">
+    <div class="grid">
 
-      <div class="p-col" style="max-width: 40rem; margin: auto;">
-        <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Password reset sent</h1>
+      <div class="col" style="max-width: 40rem; margin: auto;">
+        <h1 class="h3 mt-5 mb-0 font-weight-normal">Password reset sent</h1>
 
         <p>We've emailed you instructions for setting your password, if an account exists with the email you entered.
           You
