--- a/UI/src/app/modules/comparison/components/spatial-extent/spatial-extent.component.html
+++ b/UI/src/app/modules/comparison/components/spatial-extent/spatial-extent.component.html
@@ -1,5 +1,5 @@
-<div class="p-grid">
-  <div class="p-col-12">
+<div class="grid">
+  <div class="col-12">
     <p-checkbox label="Include all points from the selected validations"
                 [binary]="true"
                 [disabled]="this.disabled"
@@ -10,7 +10,7 @@
            pTooltip="{{'By default, only common points between the validations are considered ' +
             '(unless the validations are non-overlapping)'}}"
            tooltipPosition="bottom">
-      <span class="pi pi-question-circle p-ml-2"></span>
+      <span class="pi pi-question-circle ml-2"></span>
     </label>
   </div>
 </div>
