--- a/UI/src/app/modules/comparison/components/comparison-summary/comparison-summary.component.html
+++ b/UI/src/app/modules/comparison/components/comparison-summary/comparison-summary.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="this.valResModels.length > 0" class="p-grid no-gutters">
+<div *ngIf="this.valResModels.length > 0" class="grid no-gutters">
   <!--  use different if condition-->
-  <div class="p-col-12">
+  <div class="col-12">
     <p-panel [toggleable]="true" [collapsed]="true">
       <ng-template pTemplate="header">
         <div class="text-center my-1" style="width: 92%">
@@ -19,7 +19,7 @@
              class="table">
         <tbody>
         <tr>
-          <td *ngFor="let validationModel of valResModels" class="p-py-0 p-px-0">
+          <td *ngFor="let validationModel of valResModels" class="py-0 px-0">
             <qa-validation-summary *ngIf="validationModel.validationRun|async as valRun" [validationModel]="validationModel" [validationRun]="valRun" [forComparison]="true"></qa-validation-summary>
           </td>
         </tr>
