--- a/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
+++ b/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
@@ -4,9 +4,9 @@
 <div *ngIf="!showLoadingSpinner && errorHappened" class="center alert">
   <h4> Comparison statistics not available! </h4>
 </div>
-<div *ngIf="!showLoadingSpinner && !errorHappened" class="p-grid no-gutters">
-<!--<div *ngIf="(comparisonTable$|async) as table" class="p-grid no-gutters">-->
-  <div class="p-col-12">
+<div *ngIf="!showLoadingSpinner && !errorHappened" class="grid no-gutters">
+<!--<div *ngIf="(comparisonTable$|async) as table" class="grid no-gutters">-->
+  <div class="col-12">
     <p-panel [toggleable]="true" [collapsed]="true">
       <ng-template pTemplate="header">
         <div class="text-center my-1" style="width: 92%">
@@ -20,10 +20,10 @@
           <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
         </label>
       </ng-template>
-      <div class="p-pb-3"> Shown are the median values for each metric in the two comparison datasets, and their
+      <div class="pb-3"> Shown are the median values for each metric in the two comparison datasets, and their
         difference.
       </div>
-      <div class="p-py3">
+      <div class="py3">
         <span [innerHtml]="table | dompurify"></span>
         <div class="d-flex justify-content-between align-items-center">
           <button pButton
