--- a/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
@@ -1,27 +1,27 @@
-<div class="p-grid no-gutters" *ngIf="filterModel$|async as filterModel">
-  <div class="p-col-11">
+<div class="grid no-gutters" *ngIf="filterModel$|async as filterModel">
+  <div class="col-11">
     <p-checkbox label="{{filterModel.filterDto.description}}: "
                 [binary]="true" [ngModel]="true" [readonly]=filterModel.filterDto.readonly class="readonly-filter-checkbox">
     </p-checkbox>
     <a (click)="dialogVisible=true"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
-  <div  [ngClass]="{'p-col-1': true}">
+  <div  [ngClass]="{'col-1': true}">
     <span class="pi pi-question-circle" [pTooltip]="filterModel.filterDto.help_text"></span>
   </div>
 </div>
 
 <p-dialog id="ismn-depth-selector" header="Select measurements depth range" position="top" [(visible)]="dialogVisible">
-  <div class="p-pb-3 p-pl-0"> Choose a range to include measurements done only at a<br> particular depth range.<br>
+  <div class="pb-3 pl-0"> Choose a range to include measurements done only at a<br> particular depth range.<br>
     The filter will be applied to all stations in all chosen networks.</div>
-  <div class="p-grid" style="display: flex">
-    <div class="p-col-12 p-pl-3">
-      <div class="p-grid"  id="depthFromInput">
-        <div class="p-col-2 p-px-0">
+  <div class="grid" style="display: flex">
+    <div class="col-12 pl-3">
+      <div class="grid"  id="depthFromInput">
+        <div class="col-2 px-0">
           <div class="p-fluid">
             <div>Depth from: </div>
           </div>
         </div>
-        <div class="p-col-3 p-mx-0 p-px-0 p-fluid">
+        <div class="col-3 mx-0 px-0 p-fluid">
           <p-inputNumber
             [minFractionDigits]="1"
             [maxFractionDigits]="2" suffix=" m"
@@ -35,14 +35,14 @@
       </div>
     </div>
 
-    <div class="p-col-12 p-pl-3">
-      <div class="p-grid"  id="depthToInput">
-        <div class="p-col-2 p-px-0">
+    <div class="col-12 pl-3">
+      <div class="grid"  id="depthToInput">
+        <div class="col-2 px-0">
           <div class="p-fluid">
             <div>Depth to: </div>
           </div>
         </div>
-        <div class="p-col-3 p-mx-0 p-px-0 p-fluid">
+        <div class="col-3 mx-0 px-0 p-fluid">
           <p-inputNumber
             [minFractionDigits]="1"
             [maxFractionDigits]="2" suffix=" m"
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div class="p-col-12">
+    <div class="col-12">
       <p-button label="OK" (onClick)="saveNewValues()"></p-button>
     </div>
   </div>
