--- a/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
@@ -1,16 +1,16 @@
-<div class="p-grid no-gutters"  *ngIf="filterModel$|async as filterModel">
-  <div class="p-col-11">
+<div class="grid no-gutters"  *ngIf="filterModel$|async as filterModel">
+  <div class="col-11">
     <p-checkbox label="{{filterModel.filterDto.description}}: "
                 [binary]="true" [ngModel]="true" [readonly]=filterModel.filterDto.readonly class="readonly-filter-checkbox">
     </p-checkbox>
     <a (click)="showNetworkSelector()"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
-  <div [ngClass]="{'p-col-1': true}">
+  <div [ngClass]="{'col-1': true}">
     <span class="pi pi-question-circle" [pTooltip]="filterModel.filterDto.help_text"></span>
   </div>
 </div>
 <p-dialog styleClass="networkDialog" header="Select network(s)" position="top" [(visible)]="networkSelectorVisible">
-  <div class="p-pb-3" style="max-width: 350px">
+  <div class="pb-3" style="max-width: 350px">
     Click on a continent to unfold its list of networks.<br/>
     You can find more information about the ISMN networks on the <a href="https://ismn.earth/en/networks/"
                                                                     target="_blank">ISMN networks list</a>.
