--- a/UI/src/app/modules/metrics/components/metric/metric.component.html
+++ b/UI/src/app/modules/metrics/components/metric/metric.component.html
@@ -1,12 +1,12 @@
-<div class="p-grid">
-  <div class="p-col-12">
+<div class="grid">
+  <div class="col-12">
     <p-checkbox [label]="metricModel.description" [ngModel]="metricModel.value$|async"
                 (ngModelChange)="metricModel.value$.next($event)" [binary]="true" [disabled]="disabled"
     ></p-checkbox>
     <label class="p-panel-header-icon"
            pTooltip="{{metricModel.helperText}}"
            tooltipPosition="bottom">
-      <span class="pi pi-question-circle p-ml-2"></span>
+      <span class="pi pi-question-circle ml-2"></span>
     </label>
   </div>
 </div>
