--- a/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
-<div class="p-grid no-gutters navbar">
-  <div class="p-col-12">
+<div class="grid no-gutters navbar">
+  <div class="col-12">
     <p-menubar [model]="items">
-      <div class="p-d-inline-flex"><a routerLink="home">QA4SM Validation Service</a></div>
+      <div class="inline-flex"><a routerLink="home">QA4SM Validation Service</a></div>
     </p-menubar>
   </div>
 </div>
