--- a/UI/src/app/modules/temporal-matching/components/temporal-matching/temporal-matching.component.html
+++ b/UI/src/app/modules/temporal-matching/components/temporal-matching/temporal-matching.component.html
@@ -1,8 +1,8 @@
-<div class="p-grid p-pt-4">
-  <div class="p-col-12 text-center p-py-0 p-my-0">
-    <h4 class="p-py-0 p-my-0 text-muted">
+<div class="grid pt-4">
+  <div class="col-12 text-center py-0 my-0">
+    <h4 class="py-0 my-0 text-muted">
       Temporal matching
-      <span class="pi pi-question-circle p-mb-1"
+      <span class="pi pi-question-circle mb-1"
             pTooltip="Select the size of the temporal matching window used to collocate the 'reference' and 'data' measurements in time.
             The specified temporal window is centered on the reference measurements (i.e., with edges at +- half size distance from each considered measurement point).
             NOTE: the size of the window influences the number of observations used in the validation and could lead to no results in case no matches are found."
@@ -10,15 +10,15 @@
       </span>
     </h4>
   </div>
-  <hr class="p-col-12 p-pt-0 p-mt-0 featurette-divider" style="max-width: 60rem">
-  <div class="p-col-12 p-ml-3">
-    <div class="p-grid" id="method">
-      <div class="small-label p-col-10" style="max-width: 8rem">
+  <hr class="col-12 pt-0 mt-0 featurette-divider" style="max-width: 60rem">
+  <div class="col-12 ml-3">
+    <div class="grid" id="method">
+      <div class="small-label col-10" style="max-width: 8rem">
         <div class="p-fluid">
           <div>Window size</div>
         </div>
       </div>
-      <div class="p-col-7 p-px-0">
+      <div class="col-7 px-0">
         <div class="p-float-label">
           <p-inputNumber
             id="windowSizeSelector"
