--- a/UI/src/app/modules/user/login/login.component.html
+++ b/UI/src/app/modules/user/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="center" style="max-width: 100%">
-  <div class="p-grid">
-    <div class="p-col" style="max-width: 15rem">
+  <div class="grid">
+    <div class="col" style="max-width: 15rem">
       <form [formGroup]="loginForm" class="text-center" (ngSubmit)="onSubmit()">
-        <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mt-5 mb-0 font-weight-normal">Please sign in</h1>
 
         <div class="p-fluid">
-          <span class="p-float-label p-mb-5 p-mt-4">
+          <span class="p-float-label mb-5 mt-4">
             <input pInputText id="usernameInput" type="text" formControlName="username">
             <label for="usernameInput">Username</label>
           </span>
@@ -13,7 +13,7 @@
 
 
         <div class="p-fluid">
-          <span class="p-float-label p-mb-5">
+          <span class="p-float-label mb-5">
           <input pPassword type="password"
                  formControlName="password" [feedback]="false" id="passwordInput">
           <label for="passwordInput">Password</label>
@@ -25,8 +25,8 @@
                 label="Sign in">
         </button>
 
-        <div class="p-mt-3"><a [routerLink]="'/password-reset'" class="mt-5">Forgotten your password?</a></div>
-        <div class="p-mt-3"><a [routerLink]="'/signup'" class="mt-5">No account?</a></div>
+        <div class="mt-3"><a [routerLink]="'/password-reset'" class="mt-5">Forgotten your password?</a></div>
+        <div class="mt-3"><a [routerLink]="'/signup'" class="mt-5">No account?</a></div>
       </form>
     </div>
   </div>
